# lahacks2025

./: .gitignore  README.md  daemon.py  experiment.txt  munchkin.py  munchkin_template.xml  pyproject.toml  requirements.in  requirements.txt  settings.py  setup.py
classifier/: classifier.py  model_api.py
commands/: assoc.py  find.py  gui.py  install.py  start.py  stop.py  uninstall.py  watch.py
config/: folder_paths.json  watch_paths.json
db/: database.py
engine/: daemon.py  encoder.py  queryprocessor.py  saveprocessor.py  watcher.py
engine/encoder/: encoder.py  encoder_builder.py
frontend/: ui.py
frontend/ui/: main_window.py
frontend/utils/: icons.py
models/: file.py
resources/: Da_Vinci.docx
src/: daemon.py  daemon_clerk.py  munchkin.py  settings.py  utils.py
src/api/: assoc.py  find.py  watch.py
src/classifier/: classifier.py  model_api.py  prompt_builder.py
src/cli/: find.py  gui.py  install.py  start.py  stop.py  uninstall.py  watch.py
src/commands/: assoc.py  find.py  gui.py  start.py  stop.py  uninstall.py  watch.py
src/db/: database.py
src/engine/: classifier.py  database.py  encoder.py  preprocessor.py  prompt_builder.py  queryprocessor.py  saveprocessor.py  watcher.py
src/frontend/: ui.py
src/models/: file.py
src/tests/: test_classifier_manual.py  test_file_system_config.py  test_get_sid.py  test_preprocessor_manual.py  test_semantic_indexer.py
src/ui/: main_window.py
tests/: test_get_sid.py  test_preprocessor_manual.py  test_semantic_indexer.py
utilities/: file_system_config.py  preprocessor.py
(+22 files in other folders)
