[project]
name = "lahacks2025"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "click>=8.2.1",
    "fastapi>=0.115.14",
    "olefile>=0.47",
    "pillow>=11.2.1",
    "pymupdf>=1.26.1",
    "pyside6>=6.9.1",
    "pystray>=0.19.5",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
    "watchdog>=6.0.0",
]

[project.scripts]
mckn = "munchkin:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []
